--- a/index.html
+++ b/index.html
@@ -45,24 +45,61 @@
       min-width: 200px;
     }
 
-    #spcOutlookSelect {
+    #legend {
       position: absolute;
       top: 60px;
-      right: 10px;
+      right: 20px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 10px;
+      border-radius: 8px;
+      z-index: 999;
+      font-size: 14px;
+    }
+
+    #legend h4 {
+      margin: 0 0 10px;
+    }
+
+    #legend div {
+      margin-bottom: 5px;
+    }
+
+    #legend span {
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      margin-right: 8px;
+      vertical-align: middle;
+    }
+
+    #legendToggle {
+      position: absolute;
+      top: 20px;
+      right: 20px;
       z-index: 1000;
-      padding: 6px;
-      border-radius: 6px;
+      background: #333;
+      color: white;
+      border: none;
+      padding: 8px 14px;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <select id="spcOutlookSelect">
-    <option value="Day1_Outlook">SPC Day 1 Outlook</option>
-    <option value="Day2_Outlook">SPC Day 2 Outlook</option>
-    <option value="Day3_Outlook">SPC Day 3 Outlook</option>
-  </select>
+  <button id="legendToggle">Hide Legend</button>
+  <div id="legend">
+    <h4 style="margin-top:0;">Legend</h4>
+    <div><span style="background:red;"></span> Tornado Warning</div>
+    <div><span style="background:yellow;"></span> Thunderstorm Warning</div>
+    <div><span style="background:green;"></span> Flood Warning</div>
+    <div><span style="background:purple;"></span> Winter Weather</div>
+    <div><span style="background:blue;"></span> Special Weather Statement</div>
+    <div><span style="background:orange;"></span> Other Alerts</div>
+  </div>
 
   <div id="controls">
     <button id="playPause">▶️ Play</button>
@@ -158,24 +195,23 @@
     loadRadar();
     setInterval(loadRadar, 5 * 60 * 1000);
 
-    // 🔶 NWS Alerts - Multi-color
     fetch('https://api.weather.gov/alerts/active')
       .then(response => response.json())
       .then(data => {
         data.features.forEach(alert => {
           const coords = alert.geometry?.coordinates;
-          const eventType = alert.properties.event;
-          let color = "orange"; // default
-
-          if (eventType.includes("Tornado")) color = "red";
-          else if (eventType.includes("Severe Thunderstorm")) color = "yellow";
-          else if (eventType.includes("Flood")) color = "green";
-          else if (eventType.includes("Winter")) color = "purple";
-          else if (eventType.includes("Special Weather Statement")) color = "blue";
-
           if (coords) {
+            let color = "orange";
+            const event = alert.properties.event.toLowerCase();
+
+            if (event.includes("tornado")) color = "red";
+            else if (event.includes("thunderstorm")) color = "yellow";
+            else if (event.includes("flood")) color = "green";
+            else if (event.includes("winter")) color = "purple";
+            else if (event.includes("special weather statement")) color = "blue";
+
             const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
-              color,
+              color: color,
               fillOpacity: 0.3,
               weight: 2
             }).bindPopup(`<b>${alert.properties.event}</b><br>${alert.properties.headline}`);
@@ -184,24 +220,20 @@
         });
       });
 
-    // 🌪️ Add SPC Outlook Layer
-    const spcLayerURLs = {
-      Day1_Outlook: 'https://www.spc.noaa.gov/ArcGIS/rest/services/Outlooks/Day1_Outlook/MapServer/tile/{z}/{y}/{x}',
-      Day2_Outlook: 'https://www.spc.noaa.gov/ArcGIS/rest/services/Outlooks/Day2_Outlook/MapServer/tile/{z}/{y}/{x}',
-      Day3_Outlook: 'https://www.spc.noaa.gov/ArcGIS/rest/services/Outlooks/Day3_Outlook/MapServer/tile/{z}/{y}/{x}'
-    };
+    const legend = document.getElementById("legend");
+    const legendToggle = document.getElementById("legendToggle");
 
-    let spcLayer = L.tileLayer(spcLayerURLs.Day1_Outlook, { opacity: 0.5 }).addTo(map);
-
-    document.getElementById('spcOutlookSelect').addEventListener('change', function () {
-      const selected = this.value;
-      if (spcLayer) {
-        map.removeLayer(spcLayer);
+    legendToggle.addEventListener("click", () => {
+      if (legend.style.display === "none") {
+        legend.style.display = "block";
+        legendToggle.textContent = "Hide Legend";
+      } else {
+        legend.style.display = "none";
+        legendToggle.textContent = "Show Legend";
       }
-      spcLayer = L.tileLayer(spcLayerURLs[selected], { opacity: 0.5 });
-      spcLayer.addTo(map);
     });
   </script>
 </body>
 </html>
+
 
