--- a/index.html
+++ b/index.html
@@ -45,29 +45,27 @@
       min-width: 200px;
     }
 
-    #legend {
+    .legend {
       position: absolute;
       bottom: 100px;
       left: 10px;
-      background: rgba(0,0,0,0.7);
-      color: white;
+      background: white;
       padding: 10px;
-      border-radius: 10px;
-      z-index: 9999;
+      border-radius: 8px;
+      font-size: 14px;
+      z-index: 1000;
     }
 
-    #legend div {
-      display: flex;
-      align-items: center;
-      margin-bottom: 5px;
+    .legend div {
+      margin-bottom: 4px;
     }
 
-    #legend span {
+    .legend span {
       display: inline-block;
-      width: 20px;
-      height: 12px;
+      width: 14px;
+      height: 14px;
       margin-right: 8px;
-      border-radius: 2px;
+      vertical-align: middle;
     }
   </style>
 </head>
@@ -80,14 +78,14 @@
     <div id="timestamp">Loading radar...</div>
   </div>
 
-  <div id="legend">
-    <div><span style="background:red"></span> Tornado Warning</div>
-    <div><span style="background:yellow"></span> Severe Thunderstorm Warning</div>
-    <div><span style="background:green"></span> Flood Warning</div>
-    <div><span style="background:purple"></span> Winter Weather Warning</div>
-    <div><span style="background:blue"></span> Special Weather Statement</div>
-    <div><span style="background:pink"></span> Tornado Watch</div>
-    <div><span style="background:orange"></span> Severe Thunderstorm Watch</div>
+  <div class="legend">
+    <div><span style="background:red;"></span> Tornado Warning</div>
+    <div><span style="background:pink;"></span> Tornado Watch</div>
+    <div><span style="background:yellow;"></span> Severe Thunderstorm Warning</div>
+    <div><span style="background:orange;"></span> Severe Thunderstorm Watch</div>
+    <div><span style="background:green;"></span> Flood Warning</div>
+    <div><span style="background:purple;"></span> Winter Weather</div>
+    <div><span style="background:blue;"></span> Special Weather Statement</div>
   </div>
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
@@ -184,29 +182,30 @@
       .then(data => {
         data.features.forEach(alert => {
           const coords = alert.geometry?.coordinates;
-          const eventType = alert.properties.event;
-          let color = "orange"; // default
+          const eventType = alert.properties.event || "";
+
+          if (!coords || !Array.isArray(coords[0])) return;
+
+          let color = "orange";
 
           if (eventType.includes("Tornado Warning")) color = "red";
+          else if (eventType.includes("Tornado Watch")) color = "pink";
           else if (eventType.includes("Severe Thunderstorm Warning")) color = "yellow";
+          else if (eventType.includes("Severe Thunderstorm Watch")) color = "orange";
           else if (eventType.includes("Flood")) color = "green";
           else if (eventType.includes("Winter")) color = "purple";
           else if (eventType.includes("Special Weather Statement")) color = "blue";
-          else if (eventType.includes("Tornado Watch")) color = "pink";
-          else if (eventType.includes("Severe Thunderstorm Watch")) color = "orange";
 
-          if (coords) {
-            const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
-              color,
-              fillOpacity: 0.3,
-              weight: 2
-            }).bindPopup(`<b>${alert.properties.event}</b><br>${alert.properties.headline}`);
-            poly.addTo(map);
-          }
+          const poly = L.polygon(coords[0].map(pair => [pair[1], pair[0]]), {
+            color,
+            fillOpacity: 0.3,
+            weight: 2
+          }).bindPopup(`<b>${alert.properties.event}</b><br>${alert.properties.headline}`);
+          
+          poly.addTo(map);
         });
       });
   </script>
 </body>
 </html>
-
 
